# eos

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTORS.md  CTestCustom.cmake  DEPLOYMENT.md  Dockerfile  Doxyfile  GETTING_STARTED.md  LICENSE  NOTICE  README.md  SECURITY.md  build.yaml  mkdocs.yml  run_all_tests.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.reuse/: dep5
backends/: CMakeLists.txt
backends/include/eos/: backend.h
backends/src/: autotools_backend.c  backend.c  buildroot_backend.c  cargo_backend.c  cmake_backend.c  freertos_backend.c  kbuild_backend.c  make_backend.c  meson_backend.c  ninja_backend.c  nuttx_backend.c  zephyr_backend.c
boards/: am64x.yaml  esp32.yaml  generic-8051.yaml  generic-alpha.yaml  generic-arc.yaml  generic-arm11.yaml  generic-arm7tdmi.yaml  generic-arm9.yaml  generic-avr.yaml  generic-avr32.yaml  generic-blackfin.yaml  generic-c166.yaml  generic-c28x.yaml  generic-c6000.yaml  generic-ceva.yaml  generic-cortex-a15.yaml  generic-cortex-a35.yaml  generic-cortex-a5.yaml  generic-cortex-a55.yaml  generic-cortex-a76.yaml  generic-cortex-a9.yaml  generic-cortex-m0.yaml  generic-cortex-m0plus.yaml  generic-cortex-m23.yaml  generic-cortex-m3.yaml  generic-cortex-m33.yaml  generic-cortex-m55.yaml  generic-cortex-m85.yaml  generic-cortex-r4.yaml  generic-cortex-r52.yaml  generic-cris.yaml  generic-dspic.yaml  generic-esp32c3.yaml  generic-esp32s3.yaml  generic-frv.yaml  generic-h8300.yaml  generic-hexagon.yaml  generic-ia64.yaml  generic-kalimba.yaml  generic-lm32.yaml  (+46 more)
build_coverage/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_qemu_arm64/: CMakeCache.txt  Makefile  cmake_install.cmake
build_sim/: CMakeCache.txt  Makefile  cmake_install.cmake
cmake/: cppcheck.cmake  deps.cmake  ebuild_layers.cmake
cmd/eos/: CMakeLists.txt  main.c
core/: CMakeLists.txt
debug/: CMakeLists.txt
examples/ble-sensor/: CMakeLists.txt  README.md  eos.yaml  main.c
examples/blink-gpio/: CMakeLists.txt  README.md  eos.yaml  main.c
examples/multicore-amp/: CMakeLists.txt  README.md  eos.yaml  main.c
examples/multitask-rtos/: CMakeLists.txt  README.md  eos.yaml  main.c
examples/posix-app/: CMakeLists.txt  README.md  eos.yaml  main.c
examples/secure-ota/: CMakeLists.txt  README.md  eos.yaml  main.c
examples/uart-echo/: CMakeLists.txt  README.md  eos.yaml  main.c
examples/ui-touchscreen/: CMakeLists.txt  README.md  eos.yaml  main.c
examples/watchface/: CMakeLists.txt  README.md  eos.yaml  main.c
layers/ai/: CMakeLists.txt  layer.yaml
layers/ai/include/: eos_ai.h
layers/ai/src/: eos_ai.c
pkg/: CMakeLists.txt
pkg/include/eos/: package.h
pkg/src/: fetch.c  package.c
products/: ev.h  (+46 more)
services/: CMakeLists.txt
services/compat/: CMakeLists.txt
services/compat/include/eos/: os_adapter.h
services/compat/src/: os_adapter.c  os_adapter_eos.c
services/crypto/: CMakeLists.txt
services/crypto/include/eos/: crypto.h
services/crypto/src/: aes.c  crc.c  rsa_ecc_sha512.c  sha256.c
services/datacenter/: CMakeLists.txt
services/datacenter/include/eos/: datacenter.h
services/datacenter/src/: datacenter.c
services/filesystem/: CMakeLists.txt
services/filesystem/include/eos/: filesystem.h
services/filesystem/src/: filesystem.c
services/gps/src/: gps_nmea.c
services/init/: CMakeLists.txt
services/init/include/eos/: service.h
services/init/src/: service.c
services/linux/: CMakeLists.txt
services/linux/include/eos/: linux_security.h
services/linux/src/: linux_security.c
services/linux_ipc/: CMakeLists.txt
services/linux_ipc/include/eos/: linux_ipc.h  linux_sysv_ipc.h
services/linux_ipc/src/: linux_ipc.c  linux_sysv_ipc.c
services/motor/: CMakeLists.txt
services/motor/include/eos/: motor_ctrl.h
services/motor/src/: motor_ctrl.c
services/os/: CMakeLists.txt
services/os/include/eos/: os_services.h
services/os/src/: os_services.c
services/ota/: CMakeLists.txt
services/ota/include/eos/: ota.h
services/ota/src/: ota.c
services/pkg/: eos_pkg.c  eos_pkg.h  eos_pkg_cli.c
services/posix/: CMakeLists.txt
services/posix/include/eos/: posix_io.h  posix_ipc.h  posix_signals.h  posix_sync.h  posix_threads.h  posix_time.h
services/posix/src/: posix_io.c  posix_ipc.c  posix_signals.c  posix_sync.c  posix_threads.c  posix_time.c
services/rtos/: CMakeLists.txt
services/rtos/include/eos/: rtos_security.h
services/rtos/src/: rtos_security.c
services/security/: CMakeLists.txt
services/security/include/eos/: security.h
services/security/src/: security.c
services/sensor/: CMakeLists.txt
services/sensor/include/eos/: sensor.h
services/sensor/src/: sensor.c
services/ui/: CMakeLists.txt
services/ui/include/eos/: ui.h
services/ui/src/: ui.c  ui_display_drv.c  ui_gesture.c  ui_touch_drv.c
services/vxworks/: CMakeLists.txt
services/vxworks/include/eos/: vxworks_int.h  vxworks_msgq.h  vxworks_sem.h  vxworks_task.h  vxworks_wd.h
services/vxworks/src/: vxworks_int.c  vxworks_msgq.c  vxworks_sem.c  vxworks_task.c  vxworks_wd.c
tests/: CMakeLists.txt  main_system_test.c  test_board_configs.c  test_config.c  test_crypto.c  test_crypto_aes.c  test_crypto_ecc.c  test_crypto_rsa.c  test_crypto_sha512.c  test_debug.c  test_driver_recovery.c  test_drivers.c  test_e2e.c  test_emulation_simulation.c  test_filesystem.c  test_firmware.c  test_graph.c  test_hal.c  test_hal_stm32f4.c  test_kernel.c  test_motor_ctrl.c  test_multicore.c  test_net.c  test_net_integration.c  test_net_mock.c  test_os_services.c  test_ota.c  test_package.c  test_performance_benchmarks.c  test_power.c  test_profiles.c  test_security.c  test_sensor.c  test_service.c  test_stress.c  test_ui_gesture.c
tests/functional/: test_functional_e2e.py  test_gps_driver.py
tests/fuzz/: CMakeLists.txt  fuzz_aes.c  fuzz_devicetree.c  fuzz_ota_header.c  fuzz_sha256.c
tests/mocks/: lvgl.h
tests/performance/: test_performance_benchmarks.py
tests/simulation/: test_emulation_simulation.py
tests/unit/: test_unit_core.py
(+455 files in other folders)
