add_subdirectory(crypto)
add_subdirectory(security)
add_subdirectory(os)
add_subdirectory(linux)
add_subdirectory(rtos)
add_subdirectory(sensor)
add_subdirectory(motor)
add_subdirectory(ota)
add_subdirectory(filesystem)
add_subdirectory(datacenter)

# UI Framework (LVGL integration layer)
if(EOS_ENABLE_UI OR NOT DEFINED EOS_ENABLE_UI)
    add_subdirectory(ui)
endif()

# OS Compatibility Layers (compile-time optional)
if(EOS_ENABLE_COMPAT OR NOT DEFINED EOS_ENABLE_COMPAT)
    add_subdirectory(compat)
endif()
if(EOS_ENABLE_POSIX)
    add_subdirectory(posix)
endif()
if(EOS_ENABLE_VXWORKS)
    add_subdirectory(vxworks)
endif()
if(EOS_ENABLE_LINUX_IPC)
    add_subdirectory(linux_ipc)
endif()
